[package]
name = "ejni"
version = "0.1.0"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
edition = "2018"
description = "Library to make working with JNI more pleasant"
licence = "MIT or Apache-2.0"
keywords = ["jni", "ffi", "java"]
categories = ["api-bindings"]
repository = "https://github.com/TheDutchMC/eJNI"
homepage = "https://github.com/TheDutchMC/eJNI"

[dependencies]
jni = "0.19.0"